--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,10 +7,7 @@
 			"problemMatcher": [
 				"$tsc"
 			],
-			"group": {
-				"kind": "build",
-				"isDefault": true
-			},
+			"group": "build",
 			"label": "tsc: ビルド - tsconfig.json"
 		}
 	]
